--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/prices-page/prices-page.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/prices-page/prices-page.scss
@@ -102,7 +102,7 @@
     }
 
     &__section-title {
-      margin-bottom: 3rem;
+      margin-bottom: 2.5rem;
 
       font-size: 2.4rem;
       text-align: center;
@@ -117,7 +117,7 @@
         padding-top: 3.8rem;
 
         &_heading {
-          padding-top: 0;
+          padding-top: 0.5rem;
 
           color: map-deep-get($themes, 'main', 'primary-dark');
         }
@@ -228,11 +228,11 @@
 
       .table {
         &__cell {
-          padding: 1.2rem 2rem;
+          padding: 1.2rem 0.6rem;
 
           &:first-of-type {
-            min-width: 30rem;
-            padding: 1.2rem 2rem;
+            min-width: 28rem;
+            padding: 1.2rem 1rem;
           }
         }
 
@@ -243,6 +243,15 @@
             padding-top: 0;
           }
         }
+      }
+
+      &__notification-text {
+        margin-left: 1rem;
+      }
+
+      &__price-notification-description,
+      &__promo-text {
+        padding: 0 1rem;
       }
     }
   }
@@ -277,6 +286,15 @@
       }
     }
 
+    .table {
+      &__cell {
+        &,
+        &:first-of-type {
+          padding: 1.2rem;
+        }
+      }
+    }
+
     &__main-prices {
       margin-bottom: 14rem;
     }
@@ -291,13 +309,20 @@
       }
 
       &__promo-text {
-        padding-left: 2rem;
-
         font-size: 1.6rem;
 
         background: none;
         border: none;
       }
+    }
+
+    &__notification-text {
+      margin-left: 1.2rem;
+    }
+
+    &__price-notification-description,
+    &__promo-text {
+      padding: 0 1.2rem;
     }
 
     &__callback-form {
